// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`++++ <SmallWeatherDayCard /> ++++ Renders correctly for different tabs 1`] = `
<div
  className="smallWeatherDayCard"
>
  <div
    className="date"
  >
    Saturday, February 22, 2020
  </div>
  <div
    className="buttonsContainer"
  >
    <div
      className="tabButton activeTabButton"
      data-time={1582372800}
      key="1582372800"
      onClick={[Function]}
    >
      14
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582383600}
      key="1582383600"
      onClick={[Function]}
    >
      17
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582394400}
      key="1582394400"
      onClick={[Function]}
    >
      20
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582405200}
      key="1582405200"
      onClick={[Function]}
    >
      23
      -00
    </div>
  </div>
  <div
    className="tabs"
  >
    <TimeWeatherInfoTab
      timeWeather={
        Object {
          "clouds": Object {
            "all": 53,
          },
          "dt": 1582372800,
          "dt_txt": "2020-02-22 12:00:00",
          "main": Object {
            "feels_like": 4.86,
            "grnd_level": 1010,
            "humidity": 58,
            "pressure": 1026,
            "sea_level": 1026,
            "temp": 8.8,
            "temp_kf": 2.86,
            "temp_max": 8.8,
            "temp_min": 5.94,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "broken clouds",
              "icon": "04d",
              "id": 803,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 217,
            "speed": 3,
          },
        }
      }
    />
  </div>
</div>
`;

exports[`++++ <SmallWeatherDayCard /> ++++ Renders correctly for different tabs 2`] = `
<div
  className="smallWeatherDayCard"
>
  <div
    className="date"
  >
    Saturday, February 22, 2020
  </div>
  <div
    className="buttonsContainer"
  >
    <div
      className="tabButton "
      data-time={1582372800}
      key="1582372800"
      onClick={[Function]}
    >
      14
      -00
    </div>
    <div
      className="tabButton activeTabButton"
      data-time={1582383600}
      key="1582383600"
      onClick={[Function]}
    >
      17
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582394400}
      key="1582394400"
      onClick={[Function]}
    >
      20
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582405200}
      key="1582405200"
      onClick={[Function]}
    >
      23
      -00
    </div>
  </div>
  <div
    className="tabs"
  >
    <TimeWeatherInfoTab
      timeWeather={
        Object {
          "clouds": Object {
            "all": 99,
          },
          "dt": 1582383600,
          "dt_txt": "2020-02-22 15:00:00",
          "main": Object {
            "feels_like": 2.49,
            "grnd_level": 1007,
            "humidity": 62,
            "pressure": 1024,
            "sea_level": 1024,
            "temp": 7.24,
            "temp_kf": 2.14,
            "temp_max": 7.24,
            "temp_min": 5.1,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04d",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 224,
            "speed": 4.05,
          },
        }
      }
    />
  </div>
</div>
`;

exports[`++++ <SmallWeatherDayCard /> ++++ Renders correctly for different tabs 3`] = `
<div
  className="smallWeatherDayCard"
>
  <div
    className="date"
  >
    Saturday, February 22, 2020
  </div>
  <div
    className="buttonsContainer"
  >
    <div
      className="tabButton "
      data-time={1582372800}
      key="1582372800"
      onClick={[Function]}
    >
      14
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582383600}
      key="1582383600"
      onClick={[Function]}
    >
      17
      -00
    </div>
    <div
      className="tabButton activeTabButton"
      data-time={1582394400}
      key="1582394400"
      onClick={[Function]}
    >
      20
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582405200}
      key="1582405200"
      onClick={[Function]}
    >
      23
      -00
    </div>
  </div>
  <div
    className="tabs"
  >
    <TimeWeatherInfoTab
      timeWeather={
        Object {
          "clouds": Object {
            "all": 97,
          },
          "dt": 1582394400,
          "dt_txt": "2020-02-22 18:00:00",
          "main": Object {
            "feels_like": 0.2,
            "grnd_level": 1007,
            "humidity": 67,
            "pressure": 1023,
            "sea_level": 1023,
            "temp": 5.26,
            "temp_kf": 1.43,
            "temp_max": 5.26,
            "temp_min": 3.83,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04n",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 201,
            "speed": 4.32,
          },
        }
      }
    />
  </div>
</div>
`;

exports[`++++ <SmallWeatherDayCard /> ++++ Renders correctly for different tabs 4`] = `
<div
  className="smallWeatherDayCard"
>
  <div
    className="date"
  >
    Saturday, February 22, 2020
  </div>
  <div
    className="buttonsContainer"
  >
    <div
      className="tabButton "
      data-time={1582372800}
      key="1582372800"
      onClick={[Function]}
    >
      14
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582383600}
      key="1582383600"
      onClick={[Function]}
    >
      17
      -00
    </div>
    <div
      className="tabButton "
      data-time={1582394400}
      key="1582394400"
      onClick={[Function]}
    >
      20
      -00
    </div>
    <div
      className="tabButton activeTabButton"
      data-time={1582405200}
      key="1582405200"
      onClick={[Function]}
    >
      23
      -00
    </div>
  </div>
  <div
    className="tabs"
  >
    <TimeWeatherInfoTab
      timeWeather={
        Object {
          "clouds": Object {
            "all": 100,
          },
          "dt": 1582405200,
          "dt_txt": "2020-02-22 21:00:00",
          "main": Object {
            "feels_like": -1.76,
            "grnd_level": 1004,
            "humidity": 68,
            "pressure": 1021,
            "sea_level": 1021,
            "temp": 4.22,
            "temp_kf": 0.71,
            "temp_max": 4.22,
            "temp_min": 3.51,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04n",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 212,
            "speed": 5.48,
          },
        }
      }
    />
  </div>
</div>
`;
